Fix extra space on home page

--- a/assets/store.css
+++ b/assets/store.css
@@ -54,7 +54,7 @@ p, a, label, input, span, small, td, address {
 }
 
 .intro {
-  margin: 50px 0;
+  margin: 50px 0 0;
   text-align: center;
 }
 
